5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1716_2507.log
== SUBMITION (2019-05-15 19:01:09) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	qtdPirarucu = qtdpirarucu + qtdPirarucu*pctCresc
	meses++
	if(qtdPirarucu == 0):
		print("ZERO", meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO",meses)
-- EXECUTION TIME:
0.243587
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 7
    meses++
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:01:13) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	qtdPirarucu = qtdpirarucu + qtdPirarucu*pctCresc
	meses++
	if(qtdPirarucu == 0):
		print("ZERO", meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO",meses)
-- ERROR:
File "XXXX", line 7
    meses++
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:01:29) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	qtdPirarucu = qtdpirarucu + qtdPirarucu*pctCresc
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO", meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO",meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtdPirarucu = qtdpirarucu + qtdPirarucu*pctCresc
NameError: name 'qtdpirarucu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:01:33) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	qtdPirarucu = qtdpirarucu + qtdPirarucu*pctCresc
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO", meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO",meses)
-- EXECUTION TIME:
0.304236
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 6, in <module>
    qtdPirarucu = qtdpirarucu + qtdPirarucu*pctCresc
NameError: name 'qtdpirarucu' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:01:36) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	qtdPirarucu = qtdpirarucu + qtdPirarucu*pctCresc
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO", meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO",meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    qtdPirarucu = qtdpirarucu + qtdPirarucu*pctCresc
NameError: name 'qtdpirarucu' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:03:06) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	retirado = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu + qtdPirarucu*pctCresc
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO", meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO",meses)
-- EXECUTION TIME:
0.252035
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO 1
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO 1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:03:15) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	retirado = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu + qtdPirarucu*pctCresc
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO", meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO",meses)
-- OUTPUT:
MAXIMO 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:03:41) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	retirado = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu + qtdPirarucu*pctCresc
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO", meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO",meses)
-- OUTPUT:
MAXIMO 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:04:53) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	retirado = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu + qtdPirarucu*pctCresc
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.342005
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
1
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:05:18) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	retirado = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu + qtdPirarucu*pctCresc - retirado
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.330258
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
1
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
MAXIMO
1
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:05:22) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	retirado = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu + qtdPirarucu*pctCresc - retirado
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- OUTPUT:
MAXIMO
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:06:02) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	
	
	if(qtdPirarucu == 0):
		print("ZERO", meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO",meses)
-- EXECUTION TIME:
396.57
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:06:42) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	retirado = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu + qtdPirarucu*pctCresc - retirado
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.13717
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 7, in <module>
    retirado = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:06:46) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	retirado = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu + qtdPirarucu*pctCresc - retirado
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    retirado = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:10:08) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas) + qtdPirarucu*pctCresc 
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.215262
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:10:20) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.202927
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:10:24) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:10:44) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses+=1
	if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:11:39) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:12:48) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses+=1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.184573
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:12:54) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses+=1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:14:17) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses+=1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu=>8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.163774
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 13
    elif(qtdPirarucu=>8000):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:14:24) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses+=1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu==8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.145098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:14:43) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses+=1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu=>8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.158542
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 13
    elif(qtdPirarucu=>8000):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:53:41) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses=meses+1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu=>8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
File "XXXX", line 13
    elif(qtdPirarucu=>8000):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:54:26) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses=meses+1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.208124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:54:29) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses=meses+1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:55:00) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses=meses+1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:55:19) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses=meses+1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:57:36) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas)+ qtdPirarucu*pctCresc
	meses=meses+1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:57:56) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas)+ qtdPirarucu*pctCresc
	meses=meses+1
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:03:21) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print(qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas)+ qtdPirarucu*pctCresc
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu == 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:04:30) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print(qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas)+ qtdPirarucu*pctCresc
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:04:54) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print(qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas)+ qtdPirarucu*pctCresc
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:05:50) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print(qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + qtdPirarucu*pctCresc) - vendas
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:08:40) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print(qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + (qtdPirarucu*pctCresc)) - vendas
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:09:22) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + (qtdPirarucu*pctCresc)) - vendas
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:12:24) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas) + (qtdPirarucu*pctCresc)) 
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
File "XXXX", line 9
    qtdPirarucu = (qtdPirarucu - vendas) + (qtdPirarucu*pctCresc)) 
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:12:38) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas) + (qtdPirarucu*pctCresc)
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:13:09) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas) 
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:13:24) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas) 
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.190394
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 8, in <module>
    vendas = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:13:48) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas) 
	meses=meses+1
	print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:17:10) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 1
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
	else:
		print('antes',qtdPirarucu)
		vendas = int(input("retirado: "))
		qtdPirarucu = (qtdPirarucu - vendas) + (qtdPirarucu*pctCresc)
		meses=meses+1
		print(qtdPirarucu)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:19:15) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<8000 and qtdPirarucu>0):
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
	else:
		print('antes',qtdPirarucu)
		vendas = int(input("retirado: "))
		qtdPirarucu = (qtdPirarucu - vendas) + (qtdPirarucu*pctCresc)
		meses=meses+1
		print(qtdPirarucu)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:21:42) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
	else:
		print('antes',qtdPirarucu)
		vendas = int(input("retirado: "))
		qtdPirarucu = (qtdPirarucu - vendas) + (qtdPirarucu*pctCresc)
		meses=meses+1
		print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 20:22:06) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
	else:
		print('antes',qtdPirarucu)
		vendas = int(input("retirado: "))
		qtdPirarucu = (qtdPirarucu - vendas) + (qtdPirarucu*pctCresc)
		meses=meses+1
		print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- EXECUTION TIME:
0.153941
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 16, in <module>
    vendas = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:22:08) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100
while(qtdPirarucu<=8000 and qtdPirarucu>0):
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
	else:
		print('antes',qtdPirarucu)
		vendas = int(input("retirado: "))
		qtdPirarucu = (qtdPirarucu - vendas) + (qtdPirarucu*pctCresc)
		meses=meses+1
		print(qtdPirarucu)
if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:53:36) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<=8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu - vendas) + (qtdPirarucu*pctCresc)
	meses=meses+1
	print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:58:33) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<=8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + pctCresc - vendas
	meses=meses+1
	print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)

-- EXECUTION TIME:
0.316577
-- ERROR:
  File "/home/codebench/codes/1716/2507/main.py", line 11
    meses=meses+1
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:58:42) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<=8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = (qtdPirarucu + pctCresc - vendas
	meses=meses+1
	print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu>=8000):
		print("MAXIMO")
		print(meses)

-- ERROR:
File "XXXX", line 11
    meses=meses+1
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:22:15) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())
vendas = int(input())
meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<=8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu + pctCresc - vendas
	meses=meses+1
	print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)

-- EXECUTION TIME:
0.144792
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 9, in <module>
    vendas = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:23:44) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())/100
vendas = int(input())
meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu+(qtdPirarucu * pctCresc) - vendas
	meses=meses+1
	#print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:24:07) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())/100
vendas = int(input())
meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu+(qtdPirarucu * pctCresc) - vendas
	meses=meses+1
	#print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:24:25) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())/100

meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu+(qtdPirarucu * pctCresc) - vendas
	meses=meses+1
	#print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    vendas = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:24:33) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())

meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu+(qtdPirarucu * pctCresc) - vendas
	meses=meses+1
	#print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)

-- OUTPUT:
antes 1234
antes 1918.04
antes 2984.1423999999997
antes 4646.262144
antes 7238.1689446400005
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:24:47) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())

meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu+(qtdPirarucu * pctCresc) - vendas
	meses=meses+1
	#print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)

-- EXECUTION TIME:
0.159851
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
antes 1234
antes 1918.04
antes 2984.1423999999997
antes 4646.262144
antes 7238.1689446400005
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
antes 5432
antes 4499.32
antes 3890.3131999999996
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
antes 2468
antes 2097.8
antes 1932.0300000000002
antes 2607.2405000000003
antes 3517.7746750000006
antes 4745.995811250001
antes 6403.094345187501
MAXIMO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:24:48) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())

meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu+(qtdPirarucu * pctCresc) - vendas
	meses=meses+1
	#print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)

-- EXECUTION TIME:
0.129462
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
antes 1234
antes 1918.04
antes 2984.1423999999997
antes 4646.262144
antes 7238.1689446400005
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
antes 5432
antes 4499.32
antes 3890.3131999999996
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
antes 2468
antes 2097.8
antes 1932.0300000000002
antes 2607.2405000000003
antes 3517.7746750000006
antes 4745.995811250001
antes 6403.094345187501
MAXIMO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:24:49) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())

meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu+(qtdPirarucu * pctCresc) - vendas
	meses=meses+1
	#print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)

-- EXECUTION TIME:
0.139208
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
antes 1234
antes 1918.04
antes 2984.1423999999997
antes 4646.262144
antes 7238.1689446400005
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
antes 5432
antes 4499.32
antes 3890.3131999999996
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
antes 2468
antes 2097.8
antes 1932.0300000000002
antes 2607.2405000000003
antes 3517.7746750000006
antes 4745.995811250001
antes 6403.094345187501
MAXIMO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:24:49) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())

meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu+(qtdPirarucu * pctCresc) - vendas
	meses=meses+1
	#print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)

-- EXECUTION TIME:
0.179989
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
antes 5432
antes 4499.32
antes 3890.3131999999996
ZERO
3
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
antes 5432
antes 4499.32
antes 3890.3131999999996
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
antes 2468
antes 2097.8
antes 1932.0300000000002
antes 2607.2405000000003
antes 3517.7746750000006
antes 4745.995811250001
antes 6403.094345187501
MAXIMO
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:24:49) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())

meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu+(qtdPirarucu * pctCresc) - vendas
	meses=meses+1
	#print(qtdPirarucu)
	
	if(qtdPirarucu <= 0):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)

-- EXECUTION TIME:
0.310538
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
antes 5432
antes 4499.32
antes 3890.3131999999996
ZERO
3
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
antes 2468
antes 2097.8
antes 1932.0300000000002
antes 2607.2405000000003
antes 3517.7746750000006
antes 4745.995811250001
antes 6403.094345187501
MAXIMO
7
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:26:32) 
-- CODE:
qtdPirarucu = int(input())
pctCresc = float(input())

meses = 0
pctCresc = pctCresc/100

while(qtdPirarucu<8000 and qtdPirarucu>0):
	print('antes',qtdPirarucu)
	vendas = int(input("retirado: "))
	qtdPirarucu = qtdPirarucu+(qtdPirarucu * pctCresc) - vendas
	
	#print(qtdPirarucu)
	
	if(qtdPirarucu >= 0 and qtdPirarucu<=8000):
		print("ZERO")
		print(meses)
	elif(qtdPirarucu >= 8000):
		print("MAXIMO")
		print(meses)
	meses=meses+1
-- EXECUTION TIME:
0.155289
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
antes 1234
ZERO
0
antes 1918.04
ZERO
1
antes 2984.1423999999997
ZERO
2
antes 4646.262144
ZERO
3
antes 7238.1689446400005
MAXIMO
4
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
antes 5432
ZERO
0
antes 4499.32
ZERO
1
antes 3890.3131999999996
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
antes 2468
ZERO
0
antes 2097.8
ZERO
1
antes 1932.0300000000002
ZERO
2
antes 2607.2405000000003
ZERO
3
antes 3517.7746750000006
ZERO
4
antes 4745.995811250001
ZERO
5
antes 6403.094345187501
MAXIMO
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:35:11) 
-- CODE:
qi = int(input())
pc = float(input())/100

c = 0
while(qi>0 and qi<8000):
	qi = qi + (qi*pc)
	qr = int(input())
	if(qi>=0 and qi<=8000):
		qi = qi - qr
		mensagem = "ZERO"
	else:
		mensagem = "MAXIMO"
	c = c +1
print(mensagem)
print(c)
-- EXECUTION TIME:
0.187823
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
